Bug #42941
mds: stuck "waiting for osdmap 273 (which blacklists prior instance)"
% Done:
0%
Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Description
2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSIOContextBase::complete: 12C_IO_Wrapper 2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSContext::complete: 12C_IO_Wrapper 2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSContext::complete: N7MDSRank26C_MDS_StandbyReplayRestartE 2019-11-22T00:00:03.705+0000 7f9f737f6700 1 mds.0.452 standby_replay_restart (final takeover pass) 2019-11-22T00:00:03.705+0000 7f9f737f6700 1 mds.0.452 waiting for osdmap 273 (which blacklists prior instance) 2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSIOContextBase::complete: 12C_IO_Wrapper 2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSContext::complete: 12C_IO_Wrapper 2019-11-22T00:00:03.705+0000 7f9f737f6700 10 MDSContext::complete: N7MDSRank26C_MDS_StandbyReplayRestartE 2019-11-22T00:00:03.705+0000 7f9f737f6700 1 mds.0.452 standby_replay_restart (final takeover pass) 2019-11-22T00:00:03.705+0000 7f9f737f6700 1 mds.0.452 waiting for osdmap 273 (which blacklists prior instance) ...
Infinite loop in mds log from /ceph/teuthology-archive/pdonnell-2019-11-21_22:49:13-fs-wip-pdonnell-testing-20191121.191852-distro-basic-smithi/4530520
Probably caused by: https://github.com/ceph/ceph/pull/16715
History
#1 Updated by Patrick Donnelly about 1 year ago
- Status changed from New to In Progress
- Assignee changed from Adam Emerson to Patrick Donnelly
I see the issue.
#2 Updated by Patrick Donnelly about 1 year ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 31801
#3 Updated by Patrick Donnelly about 1 year ago
- Status changed from Fix Under Review to Rejected
Cause was reverted.