mds: correct infinite loop for standby replay restart

Fixes: 0ab72913186d38caf0efe2bc51c6846aa2c7d1f0
Fixes: https://tracker.ceph.com/issues/42941
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>